# swallow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ocamlformat  BuildMakefile  CMakeLists.txt  FAQ  LICENSE  Makefile  README  README.md  TAGS  after_build.sh  build.ninja  dune-project  flex_bison.sh  make.ml  makefile  mlisp  mlisp.opam  ocamlisp.opam  pom.ml  stdlib.mlisp  swallow.opam  xmake.lua
.github/workflows/: build.yaml
base/: base.cpp  xmake.lua
cli/: main.cpp  xmake.lua
cli/utils/: structopt.hpp
compiler/: compiler.cpp  compiler.h  flex_bison.sh  main.cpp  xmake.lua
compiler/ast/: ast.cpp  ast.h  ast.hpp  dump.cpp  g-machine.cpp  gmachine.cpp  print.cpp  type.cpp  xmake.lua
compiler/diagnostics/: LICENSE  code.hpp  diagnostics.cpp  diagnostics.h  reporter.cpp  reporter.h  reporter.hpp  termcolor.hpp  utils.cpp  utils.h  xmake.lua
compiler/error/: errors.hpp
compiler/g-machine/: binop.cpp  binop.hpp  environment.cpp  environment.hpp  instruction.cpp  instruction.hpp
example/: ApplicationTypeCheckingFailed.sw  BinopTypeCheckingFailed.sw  BranchType.sw  E0001.sw  E0002.sw  E0003.sw  Function.sw  IllegalPattern.sw  Length.sw  List.sw  NotDeclared.sw  ParsingError.sw  PatternType.sw  Plus.sw  function.sw  list.sw  pair.sw
lib/: ast.ml  dune  environment.ml  error.ml  eval.ml  object.ml  primitives.ml  reader.ml  repl.ml  stdlib.ml  stream.ml  types.ml  utils.ml
repl/: main.cpp  xmake.lua
resources/: logo.xcf
src/: main.cpp
stdlib/: stdlib.cpp  xmake.lua
test/: 01_fact.mlisp  02_metacircular.mlisp  03_fibonacci.mlisp  05_mutually_recursive_functions.mlisp  dune  end_normal_test.mlisp  end_test_errors.mlisp  mlisp.ml  swallow.ml
vs2022/: swallow.sln
(+184 files in other folders)
